--- a/templates/products.html.jinja2
+++ b/templates/products.html.jinja2
@@ -27,7 +27,7 @@
             <th class="align-middle" scope="row">{{ product['id'] }}</th>
             <td class="align-middle" >{{ product['name'] }}</td>
             <td class="align-middle" >{{ product['description'] }}</td>
-            <td class="align-middle" >{{ product['quantity_available'] }}</td>
+            <td class="align-middle" >{{ product['available_quantity'][0] }}<br/>{{ product['available_quantity'][1] }}<br/>{{ product['available_quantity'][2] }}<br/>{{ product['available_quantity'][3] }}<br/>{{ product['available_quantity'][4] }}</td>
             <td class="align-middle" >{{ product['price'] }}</td>
             <td class="align-middle" >{{ product['price_in_pack'] }}</td>
             <td class="align-middle" >
