--- a/templates/product_form.html.jinja2
+++ b/templates/product_form.html.jinja2
@@ -33,18 +33,49 @@
                     <label for="product_description" class="col-sm-3 col-form-label text-right">Description</label>
                     <div class="col-sm-9">
                         <textarea type="text" class="form-control" id="product_description"
-                                  name="product_description">{% if product != None%}{{ product.description }}{% endif %}</textarea>
+                                  name="product_description">{% if product != None %}
+                            {{ product.description }}{% endif %}</textarea>
 
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="product_quantity_available" class="col-sm-3 col-form-label text-right">Quantité
-                        disponible</label>
-                    <div class="col-sm-3">
-                        <input type="number" class="form-control" {% if product != None %}
-                               value="{{ product.quantity_available }}" {% endif %} id="product_quantity_available"
-                               name="product_quantity_available"
-                               required min="0"/>
+                    <label class="col-sm-3 col-form-label text-right">Quantités disponibles</label>
+                    <div class="col-sm-9">
+                        <table class="table table-borderless">
+                            <thead>
+                            <tr>
+                                <th scope="col">Lun</th>
+                                <th scope="col">Mar</th>
+                                <th scope="col">Mer</th>
+                                <th scope="col">Jeu</th>
+                                <th scope="col">Ven</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td><input type="number" class="form-control" {% if product != None %}
+                               value="{{ product.available_quantity_mon }}" {% endif %} id="product_available_quantity_mon"
+                               name="product_available_quantity_mon"
+                               required min="0"/></td>
+                                <td><input type="number" class="form-control" {% if product != None %}
+                               value="{{ product.available_quantity_tue }}" {% endif %} id="product_available_quantity_tue"
+                               name="product_available_quantity_tue"
+                               required min="0"/></td>
+                                <td><input type="number" class="form-control" {% if product != None %}
+                               value="{{ product.available_quantity_wed }}" {% endif %} id="product_available_quantity_wed"
+                               name="product_available_quantity_wed"
+                               required min="0"/></td>
+                                <td><input type="number" class="form-control" {% if product != None %}
+                               value="{{ product.available_quantity_thu }}" {% endif %} id="product_available_quantity_thu"
+                               name="product_available_quantity_thu"
+                               required min="0"/></td>
+                                <td><input type="number" class="form-control" {% if product != None %}
+                               value="{{ product.available_quantity_fri }}" {% endif %} id="product_available_quantity_fri"
+                               name="product_available_quantity_fri"
+                               required min="0"/></td>
+                            </tr>
+                            </tbody>
+                        </table>
                         <div class="invalid-feedback">
                             Indiquez la quantité disponible
                         </div>
